[package]

name = "gum_ingester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
cadence = "0.29.0"
cadence-macros = "0.29.0"
chrono = "0.4.23"
figment = { version = "0.10.8", features = ["env"] }
futures = "0.3.26"
plerkle_messenger = { version = "1.4.1", features = ["redis"] }
plerkle_serialization = "1.4.1"
rand = "0.8.5"
serde = "1.0.152"
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = ["macros", "runtime-tokio-rustls", "postgres", "uuid", "offline", "json"] }
sea-orm = { version = "0.10.6", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "mock"] }
sea-query = { version = "0.28.1", features = ["postgres-array"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tokio-postgres = "0.7.5"
async-trait = "0.1.64"
rust-crypto = "0.2.36"
anchor-lang = "0.26.0"
solana-sdk = "1.14.16"
flatbuffers = "22.10.26"
reqwest = "0.11.14"
url = "2.3.1"
spl-account-compression = { version = "0.1.8", features = ["no-entrypoint"] }
db_entities = { version = "0.1.0", path = "../db_entities" }
